--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: csharp
 mono: none
-dotnet: 2.1.101
+dotnet: 2.1.105
 os:
   - linux
 script:
- - dotnet restore
- - dotnet build
+ - build.sh
