--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: csharp
 mono: none
 dotnet: 2.1.300-preview2-008530
+dist: trusty
 os:
   - linux
+before_install:
+- curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+- sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg
+- sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod
+  trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
+- sudo apt-get update
+- sudo apt-get install dotnet-sdk-2.1.300-preview2-008530
 script:
  - ./build.sh
