--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: csharp
 mono: none
-dist: trusty
+dist: xenial
 os:
   - linux
 before_install:
 - curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
 - sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg
-- sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod
-  trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
+- sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-xenial-prod xenial main" > /etc/apt/sources.list.d/dotnetdev.list'
+- sudo apt-get install apt-transport-https
 - sudo apt-get update
-- sudo apt-get install dotnet-sdk-2.1.300-preview2-008530
+- sudo apt-get install dotnet-sdk-2.1.300-preview2-008533
 script:
  - ./build.sh
