--- a/src/LakseBot/Properties/launchSettings.json
+++ b/src/LakseBot/Properties/launchSettings.json
@@ -20,7 +20,9 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "BOT_TOKEN": "xoxb-342419995461-JGA1r5ZqfNiD6UJwwuMw5zzE",
+        "BOT_CHANNEL": "GAC3TKTV5"
       }
     }
   }
