--- a/src/LakseBot/Properties/launchSettings.json
+++ b/src/LakseBot/Properties/launchSettings.json
@@ -10,19 +10,17 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "LakseBot": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "BOT_TOKEN": "xoxb-342419995461-JGA1r5ZqfNiD6UJwwuMw5zzE",
-        "BOT_CHANNEL": "GAC3TKTV5"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
