--- a/src/coldbot/appsettings.Development.json
+++ b/src/coldbot/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MagicLeague.db"
+    "DefaultConnection": "Data Source=../database/MagicLeague.db"
   }
 }
