Changed location of database

--- a/src/coldbot/appsettings.json
+++ b/src/coldbot/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MagicLeague.db"
+    "DefaultConnection": "Data Source=../database/MagicLeague.db"
   }
 }
