--- a/src/coldbot/appsettings.json
+++ b/src/coldbot/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=../database/MagicLeague.db"
+    "DefaultConnection": "Data Source=../database/Magic.db"
   }
 }
