--- a/src/coldbot/coldbot.csproj
+++ b/src/coldbot/coldbot.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="Serilog.Sinks.Async" Version="1.2.0-dev-00018" />
     <PackageReference Include="Serilog.Sinks.ColoredConsole" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.1-dev-00771" />
+    <PackageReference Include="Moserware.Skills" Version="1.0.0.1" />
   </ItemGroup>
 </Project>
